tests/unit-fail-compilation/proto2.ref
proto2.c[2:6-16] : undeclared identifier in parameter identifier list
Fatal error: exception Frontc.ParseError("Parse error")
Entity: line 1: parser error : Document is empty
Parsing error
^
Translation failed. Run kcc -d proto2.c to see commands run.
